<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingTop="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark"
    android:fitsSystemWindows="true"
    tools:context="com.solution.engineering.docket_ereceipt.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="10dp"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp">


        <android.support.v7.widget.CardView
            android:layout_width="90dp"
            android:layout_height="90dp"
            app:cardCornerRadius="45dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">
                <ImageView
                    android:id="@+id/docket_login"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:contentDescription="@string/login_logo"
                    android:padding="12dp"
                    android:src="@mipmap/d_icon" />

            </LinearLayout>


        </android.support.v7.widget.CardView>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text_logo"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="#F7F7F7"
            android:textSize="25sp"
            android:padding="10dp"
            android:layout_marginBottom="10dp"/>
        <EditText
            android:id="@+id/text_input_login"
            style="@style/edit_text"
            android:inputType="textEmailAddress"
            android:hint="@string/email_hint"
            android:textColor="#FF2B2B2B"
            />
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:hintEnabled="false">
            <EditText
                android:id="@+id/text_input_password"
                style="@style/edit_text"
                android:hint="@string/pass_hint"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="#FF2B2B2B"
                android:typeface="normal"
                />
        </android.support.design.widget.TextInputLayout>

        <Button
            style="@style/button_style"
            android:text="@string/login_text"
            android:gravity="center"
            android:id="@+id/login_button"
            android:textAllCaps="true"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/signup_textview"
            android:textSize="16sp"
            android:linksClickable="true"
            android:text="@string/signup_text"
            android:layout_gravity="center"
            android:padding="6dp"
            android:textColor="#F7F7F7"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/forgot_pass_textview"
            android:textSize="16sp"
            android:linksClickable="true"
            android:text="@string/forgot_pass_text"
            android:padding="6dp"
            android:layout_gravity="center"
            android:textColor="#F7F7F7"/>



    </LinearLayout>
</LinearLayout>